--- a/FinalProject/app/src/main/res/layout/credits_dialog.xml
+++ b/FinalProject/app/src/main/res/layout/credits_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_centerInParent="true"
         android:textSize="25sp"
         android:textColor="@color/black"
-        android:text="שם המחבר: עילי גיגי.\nפרויקט זה הוכן במסגרת מגמת הנדסת תוכנה בהנחיית המורה רועי אמיגה בסביבת הפיתוח אנרואיד סטודיו.\nשנת לימוד: תשפא - 2022.\n\nפרויקט זה מהווה אבן דרך משמעותית עבורי ונוצר למטרות לימוד ופיתוח."
+        android:text="שם המחבר: עילי גיגי.\nפרויקט זה הוכן במסגרת מגמת הנדסת תוכנה בהנחיית המורה רועי אמיגה בסביבת הפיתוח אנדרואיד סטודיו.\nשנת לימוד: תשפא - 2022.\n\nפרויקט זה מהווה אבן דרך משמעותית עבורי ונוצר למטרות לימוד ופיתוח."
         android:textAlignment="center"
         android:fontFamily="@font/calibri"/>
 
