--- a/FinalProject/app/src/main/res/layout/fragment_personal.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_personal.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PersonalFragment">
+    tools:context=".PersonalFragment"
+    android:background="#E4E4E4">
 
     <TextView
         android:id="@+id/tvPersonalInfoHeadline"
