--- a/FinalProject/app/src/main/res/values/colors.xml
+++ b/FinalProject/app/src/main/res/values/colors.xml
@@ -19,6 +19,9 @@
     <color name="pink">#FFC0CB</color>
     <color name="orange">#FFA500</color>
     <color name="gray">#808080</color>
+    <color name="faded_green">#9BED9F</color>
+    <color name="faded_blue">#74BBEF</color>
+    <color name="faded_red">#EF968A</color>
 
 
 </resources>
