--- a/FinalProject/app/src/main/res/layout/sign_in_dialog.xml
+++ b/FinalProject/app/src/main/res/layout/sign_in_dialog.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/dialog_bg">
+    android:background="@drawable/dialog_bg"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
 
     <TextView
