--- a/FinalProject/app/src/main/res/drawable/blue_rect.xml
+++ b/FinalProject/app/src/main/res/drawable/blue_rect.xml
@@ -4,7 +4,7 @@
 
     <size android:width="120dp" android:height="50dp"/>
 
-    <gradient android:startColor="@color/mid_blue" android:endColor="@color/mid_blue" android:centerColor="@color/mid_blue"/>
+    <gradient android:startColor="@color/blue" android:endColor="@color/blue" android:centerColor="@color/blue"/>
 
     <corners android:radius="20dp"/>
 
