--- a/FinalProject/app/src/main/res/drawable/button_shadow_selector_cream.xml
+++ b/FinalProject/app/src/main/res/drawable/button_shadow_selector_cream.xml
@@ -4,19 +4,22 @@
             <item>
                 <shape>
                     <corners android:radius="30dp" />
-                    <solid android:color="#DADADA" />
+                    <solid android:color="@color/outer_blue" />
                 </shape>
             </item>
             <item android:bottom="3dp" android:left="3dp" android:top="3dp" android:right="3dp">
                 <shape>
                     <size android:width="133.333333333dp" android:height="133.333333333dp"/>
-                    <gradient android:angle="270"
-                        android:endColor="#FFFDD0" android:startColor="#FFFDD0" />
+                    <gradient android:angle="90"
+                        android:endColor="@color/cream" android:startColor="@color/cyan" />
                     <stroke android:width="1dp" android:color="@color/gray" />
                     <corners android:radius="30dp" />
                     <padding android:bottom="10dp" android:left="10dp"
                         android:right="10dp" android:top="10dp" />
                 </shape>
+            </item>
+            <item>
+                <bitmap android:src="@drawable/ic_question_mark" android:gravity="center_horizontal|center_vertical"/>
             </item>
         </layer-list>
     </item>
