Added API integration

--- a/FinalProject/app/src/main/res/layout/regular_menu_layout.xml
+++ b/FinalProject/app/src/main/res/layout/regular_menu_layout.xml
@@ -29,13 +29,56 @@
                     android:textSize="30sp"
                     android:textStyle="bold"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="42dp"
+                    android:layout_marginRight="15dp"
+                    android:fontFamily="@font/calibri"
+                    android:text="התקדמות"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <RelativeLayout
+                    android:id="@+id/level1ProgressBatch"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="80dp">
+
+                    <ProgressBar
+                        android:id="@+id/pbLevel1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:indeterminateOnly="false"
+                        android:progress="60"
+                        android:progressDrawable="@drawable/circular_progress_bar" />
+
+                    <TextView
+                        android:id="@+id/tvLevel1Progress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/calibri"
+                        android:text="0%"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="30sp" />
+
+                </RelativeLayout>
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="55dp"
                     android:background="@drawable/coin_display_bg"
-                    android:orientation="horizontal"
-                    android:layout_centerHorizontal="true">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="25dp"
@@ -66,8 +109,8 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="115dp"
-                    android:layout_centerHorizontal="true">
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="115dp">
 
                     <ImageButton
                         android:id="@+id/ibStartLevel1"
@@ -105,13 +148,56 @@
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="42dp"
+                    android:layout_marginRight="15dp"
+                    android:fontFamily="@font/calibri"
+                    android:text="התקדמות"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <RelativeLayout
+                    android:id="@+id/level2ProgressBatch"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="80dp">
+
+                    <ProgressBar
+                        android:id="@+id/pbLevel2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:indeterminateOnly="false"
+                        android:progress="60"
+                        android:progressDrawable="@drawable/circular_progress_bar" />
+
+                    <TextView
+                        android:id="@+id/tvLevel2Progress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/calibri"
+                        android:text="0%"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="30sp" />
+
+                </RelativeLayout>
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="55dp"
                     android:background="@drawable/coin_display_bg"
-                    android:orientation="horizontal"
-                    android:layout_centerHorizontal="true">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="25dp"
@@ -142,8 +228,8 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="115dp"
-                    android:layout_centerHorizontal="true">
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="115dp">
 
                     <ImageButton
                         android:id="@+id/ibStartLevel2"
@@ -181,10 +267,53 @@
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="42dp"
+                    android:layout_marginRight="15dp"
+                    android:fontFamily="@font/calibri"
+                    android:text="התקדמות"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <RelativeLayout
+                    android:id="@+id/level3ProgressBatch"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="80dp">
+
+                    <ProgressBar
+                        android:id="@+id/pbLevel3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:indeterminateOnly="false"
+                        android:progress="60"
+                        android:progressDrawable="@drawable/circular_progress_bar" />
+
+                    <TextView
+                        android:id="@+id/tvLevel3Progress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/calibri"
+                        android:text="0%"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="30sp" />
+
+                </RelativeLayout>
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="55dp"
                     android:background="@drawable/coin_display_bg"
                     android:orientation="horizontal">
@@ -218,8 +347,8 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="115dp"
-                    android:layout_centerHorizontal="true">
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="115dp">
 
                     <ImageButton
                         android:id="@+id/ibStartLevel3"
