--- a/FinalProject/app/src/main/res/layout/level_completed_dialog.xml
+++ b/FinalProject/app/src/main/res/layout/level_completed_dialog.xml
@@ -6,6 +6,7 @@
     android:background="@drawable/dialog_bg">
 
     <TextView
+        android:id="@+id/tvLevelCompletedHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -14,24 +15,34 @@
         android:textColor="@color/black"
         android:textSize="30sp" />
 
+    <ImageView
+        android:id="@+id/ivLevelCompleted"
+        android:layout_width="300dp"
+        android:layout_height="420dp"
+        android:layout_below="@id/tvLevelCompletedHeadline"
+        android:layout_centerHorizontal="true"/>
+        <!--android:src="https://random.imagecdn.app/1080/2340"-->
+
     <ImageButton
         android:id="@+id/ibGoBackToLevelSelection"
         android:layout_width="250dp"
         android:layout_height="90dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/green_rect"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/ivLevelCompleted"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="40dp"
         android:clickable="false"
         android:fontFamily="@font/calibri"
         android:text="חזור למסך הראשי"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:layout_centerHorizontal="true"
-        android:contextClickable="false"/>
+        android:contextClickable="false"
+        android:layout_below="@id/ivLevelCompleted"/>
 </RelativeLayout>
