--- a/FinalProject/app/src/main/res/layout/level_completed_dialog.xml
+++ b/FinalProject/app/src/main/res/layout/level_completed_dialog.xml
@@ -15,13 +15,22 @@
         android:textColor="@color/black"
         android:textSize="30sp" />
 
+
+    <ProgressBar
+        android:id="@+id/pbLevelCompleted"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
+        style="?android:attr/progressBarStyle"
+        android:progressDrawable="@drawable/rotate_progress_bar_drawable"/>
+
     <ImageView
         android:id="@+id/ivLevelCompleted"
         android:layout_width="300dp"
         android:layout_height="420dp"
         android:layout_below="@id/tvLevelCompletedHeadline"
-        android:layout_centerHorizontal="true"/>
-        <!--android:src="https://random.imagecdn.app/1080/2340"-->
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:id="@+id/ibGoBackToLevelSelection"
@@ -32,6 +41,20 @@
         android:background="@drawable/green_rect"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/ivLevelCompleted"/>
+
+    <TextView
+        android:id="@+id/tvSaveToGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="405dp"
+        android:background="@drawable/info_border"
+        android:clickable="true"
+        android:fontFamily="@font/calibri"
+        android:text="שמור לגלריה"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:visibility="invisible"/>
 
     <TextView
         android:layout_width="wrap_content"
