--- a/FinalProject/app/src/main/res/layout/fragment_achievement.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_achievement.xml
@@ -123,7 +123,7 @@
                 android:clickable="false"
                 android:fontFamily="@font/calibri"
                 android:tag="1"
-                android:text="0%"
+                android:text="לא הושלם"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp" />
@@ -207,7 +207,7 @@
                 android:clickable="false"
                 android:fontFamily="@font/calibri"
                 android:tag="3"
-                android:text="0%"
+                android:text="לא הושלם"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp" />
@@ -292,7 +292,7 @@
                 android:clickable="false"
                 android:fontFamily="@font/calibri"
                 android:tag="3"
-                android:text="0%"
+                android:text="לא הושלם"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp" />
