--- a/FinalProject/app/src/main/res/layout/fragment_achievement.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_achievement.xml
@@ -128,9 +128,16 @@
                 android:textColor="@color/black"
                 android:textSize="30dp" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/bottom_borderline" />
+
         </RelativeLayout>
 
-        <RelativeLayout
+        <!--<RelativeLayout
             android:id="@+id/achievement2Layout"
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -297,7 +304,7 @@
                 android:textColor="@color/black"
                 android:textSize="30dp" />
 
-        </RelativeLayout>
+        </RelativeLayout>-->
 
     </LinearLayout>
 
