Moved to firebase

--- a/FinalProject/app/src/main/res/layout/fragment_personal.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_personal.xml
@@ -83,7 +83,8 @@
             android:scaleY="2"
             android:text="  צליל"
             android:textSize="15sp"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
+            tools:ignore="UseSwitchCompatOrMaterialXml"
+            android:checked="true"/>
     </RelativeLayout>
 
     <TextView
