Added 2 new classical levels

--- a/FinalProject/app/src/main/res/layout/classic_menu_layout.xml
+++ b/FinalProject/app/src/main/res/layout/classic_menu_layout.xml
@@ -89,7 +89,7 @@
             </RelativeLayout>
 
 
-            <!--<RelativeLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@drawable/et_border"
@@ -238,7 +238,7 @@
 
                 </RelativeLayout>
 
-            </RelativeLayout>-->
+            </RelativeLayout>
 
 
         </LinearLayout>
